@@ -152,6 +152,8 @@ scribo_debug_links_image \
 scribo_debug_logger \
 scribo_debug_looks_like_a_text_line_image \
 scribo_debug_mean_and_base_lines_image \
+scribo_debug_option_check \
+scribo_debug_option_parser \
 scribo_debug_save_comp_diff \
 scribo_debug_save_label_image \
 scribo_debug_save_table_image \
@@ -358,6 +360,7 @@ scribo_text_paragraphs_closing \
 scribo_toolchain_content_in_hdoc \
 scribo_toolchain_internal_content_in_hdoc_functor \
 scribo_toolchain_internal_text_in_doc_preprocess_functor \
+scribo_toolchain_internal_text_in_picture_functor \
 scribo_toolchain_internal_toolchain_functor \
 scribo_toolchain_text_in_doc_preprocess \
 scribo_toolchain_text_in_picture \
@@ -427,6 +430,8 @@ scribo_debug_links_image_SOURCES = scribo_debug_links_image.cc
 scribo_debug_logger_SOURCES = scribo_debug_logger.cc
 scribo_debug_looks_like_a_text_line_image_SOURCES = scribo_debug_looks_like_a_text_line_image.cc
 scribo_debug_mean_and_base_lines_image_SOURCES = scribo_debug_mean_and_base_lines_image.cc
+scribo_debug_option_check_SOURCES = scribo_debug_option_check.cc
+scribo_debug_option_parser_SOURCES = scribo_debug_option_parser.cc
 scribo_debug_save_comp_diff_SOURCES = scribo_debug_save_comp_diff.cc
 scribo_debug_save_label_image_SOURCES = scribo_debug_save_label_image.cc
 scribo_debug_save_table_image_SOURCES = scribo_debug_save_table_image.cc
@@ -633,6 +638,7 @@ scribo_text_paragraphs_closing_SOURCES = scribo_text_paragraphs_closing.cc
 scribo_toolchain_content_in_hdoc_SOURCES = scribo_toolchain_content_in_hdoc.cc
 scribo_toolchain_internal_content_in_hdoc_functor_SOURCES = scribo_toolchain_internal_content_in_hdoc_functor.cc
 scribo_toolchain_internal_text_in_doc_preprocess_functor_SOURCES = scribo_toolchain_internal_text_in_doc_preprocess_functor.cc
+scribo_toolchain_internal_text_in_picture_functor_SOURCES = scribo_toolchain_internal_text_in_picture_functor.cc
 scribo_toolchain_internal_toolchain_functor_SOURCES = scribo_toolchain_internal_toolchain_functor.cc
 scribo_toolchain_text_in_doc_preprocess_SOURCES = scribo_toolchain_text_in_doc_preprocess.cc
 scribo_toolchain_text_in_picture_SOURCES = scribo_toolchain_text_in_picture.cc
