@@ -1,3 +1,10 @@
+2011-09-02  Guillaume Lazzara  <z@lrde.epita.fr>
+
+	Regen generated files in Scribo.
+
+	* headers.mk,
+	* tests/unit_test/unit-tests.mk: Here.
+
 2011-08-22  Guillaume Lazzara  <z@lrde.epita.fr>
 
 	Fix object selector for separators in scribo-viewer.
